--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 group 'eu.telecomnancy'
 version '1.0.0'
-mainClassName = 'eu.telecomnancy.dolphin.api.MainApp'
+mainClassName = 'fr.gdussine.dolphin.BasicApp'
 
 
 repositories {
@@ -18,4 +18,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:22.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.3'
+
 }
